--- a/Prosper.html
+++ b/Prosper.html
@@ -4,6 +4,28 @@
         <title> Prosper's Resume</title>
     </head>
     <body>
+        <!-- Here is The CSS codes -->
+        <style>
+            body{
+                background: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100% );
+                background: -moz-linear-gradient(0deg, #8490ff 0%, #62bdfc 100% );
+                background: -ms-linear-gradient(0deg, #8490ff 0%, #62bdfc 100% );
+                color: white;
+                font-weight: bolder;
+                font-family: poppins, Verdana, Geneva, Tahoma, sans-serif;
+                margin: 0% 3%;
+            }
+            
+            h1{
+                color: black;
+                font-family: poppins, Verdana, Geneva, Tahoma, sans-serif;
+            }
+
+            h2{
+                color: black;
+                font-family: poppins, Verdana, Geneva, Tahoma, sans-serif;
+            }
+        </style>
         <!-- This Is the main header -->
         <main>
             <header>
@@ -145,6 +167,9 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- Cloudinary Image -->
+            <!-- <img src="https://res.cloudinary.com/prosper99/image/upload/v1566608527/smiles_bigtqw.jpg" alt="Prosper's Image"> -->
         </main>
     </body>
 </html>
